2004-02-13  Scott Goodwin  <scott@scottg.net>

      * ssl.c, nsopenssl.h: Added read and write attempt counts; if a conn
      read or write fails 1,000 in a row, we consider the conn dead and return
      an error. Hopefully this is a temporary fix until I can identify a
      better way to resolve this issue in the core server.

2004-01-19  Scott Goodwin  <scott@scottg.net>

      * Makefile: added kerberos headers to CFLAGS to resolve issue when
      OpenSSL has been compile with Kerberos support. This appears to be true
      if you're running RedHat 9, and possibly Fedora. Thanks to C.R. Oldham
      for this fix.

      * nsopenssl.h, nsopenssl.c, ssl.c: Removed rest of BIO stuff in lieu of
      straight SSL calls. Cleaned up NsOpenSSLConnHandshake().

2004-01-17  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.h, ssl.c, tclcmds.c: Ripped out use of BIOs in
      NsOpenSSLConnSend and NsOpenSSLConnRecv and replaced them with straight
      SSL methods.

2004-01-16  Scott Goodwin  <scott@scottg.net>

      * ssl.c, nsopenssl.h: Merged NsOpenSSLConnConnect and
      NsOpenSSLConnAccept into a single NsOpenSSLConnHandshake function. Also
      converted the function to use SSL_* calls directly instead of using
      OpenSSL's BIO abstraction. Subjectively, the handshake does appear to be
      quicker.

2004-01-08  Scott Goodwin  <scott@scottg.net>

      * ssl.c: Fixed bug in Recv and Send procs so that larger files could be
      downloaded and uploaded. 

2003-12-27  Scott Goodwin  <scott@scottg.net>

      * nsopenssl.c, nsopenssl.h: Added changes from Jamie Rasmussen for
      Windows build.

2003-12-24  Scott Goodwin  <scott@scottg.net>

      * all: Lots of cleanup, initializing function variables.

      * sslcontext.c, nsopenssl.c, nsopenssl.h: Added names to mutexes. Added
      MODULE_SHORT to nsopenssl.h as the mutex name length is limited.

2003-12-13  Scott Goodwin  <scott@scottg.net>
