@@ -111,10 +111,6 @@ NsOpenSSLConnCreate(SOCKET socket, NsOpenSSLContext *sslcontext)
     sslconn->sslctx          = NULL;
     sslconn->peerport        = -1;
     sslconn->socket          = socket;
-    // XXX set wild timeout for now
-    sslconn->timeout         = 200000;
-    sslconn->readabortcount  = 0;
-    sslconn->writeabortcount = 0;
 
     /*
      * It's the caller's responsibility to increment the reference count; the
@@ -123,6 +119,9 @@ NsOpenSSLConnCreate(SOCKET socket, NsOpenSSLContext *sslcontext)
      */
 
     sslconn->refcnt     = 0;
+
+    /* It's GMT, but we use this to do time diffs */
+    gettimeofday(&sslconn->timer, NULL);
 
     /* Initialize the SSL structure */
 
@@ -141,15 +140,13 @@ NsOpenSSLConnCreate(SOCKET socket, NsOpenSSLContext *sslcontext)
     // XXX is this necessary?
     SSL_set_app_data(sslconn->ssl, sslconn);
 
-    /* Run the SSL handshake on the connection */
     if (sslcontext->role == SERVER_ROLE) {
         SSL_set_accept_state(sslconn->ssl);
     } else {
         SSL_set_connect_state(sslconn->ssl);
     }
-    status = NsOpenSSLConnHandshake(sslconn);
 
-    if (status != NS_OK) {
+    if (NsOpenSSLConnHandshake(sslconn) != NS_OK) {
 	NsOpenSSLConnDestroy(sslconn);
 	sslconn = NULL;
     }
@@ -586,29 +583,9 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
     int            rc      = 0;
     int            total   = 0;
     NsOpenSSLConn *sslconn = SSL_get_app_data(ssl);
+    SOCKET         socket  = SSL_get_fd(ssl);
 
-    //SOCKET socket = INVALID_SOCKET;
-
-    //socket = SSL_get_fd(ssl);
     //Ns_Log(Debug, "SSLSend(%d): START (towrite = %d)", socket, towrite);
-
-    /*
-     * If client is cut off (as in somebody pulled the cable) which is apt to
-     * happen with dialup users, we can get stuck in a read loop where the core
-     * server keeps calling us to read bytes from a connection that is truly
-     * gone (which is why this test comes before the 'again' label). This ties
-     * up the read thread in an infinite loop that chews up the CPU resource.
-     * To handle this we keep track of failed reads. If they hit a magic
-     * number, we return an error to the server, which then closes the
-     * connection properly.
-     */
-
-    /* XXX make configurable on global server basis */
-    if (sslconn->writeabortcount > DEFAULT_READ_ABORT_COUNT) {
-        Ns_Log(Error, "%s (%s): aborting connection after %d failed writes: user most likely cut off",
-                MODULE, sslconn->server, sslconn->writeabortcount);
-        return NS_ERROR;
-    }
 
     /*
      * We loop until all bytes are written. We can call NsOpenSSLRecv() at any
@@ -619,44 +596,44 @@ NsOpenSSLConnSend(SSL *ssl, const void *buffer, int towrite)
 again:
     rc = SSL_write(ssl, (char *) buffer, towrite);
     if (rc > 0) {
-        sslconn->writeabortcount = 0;
         /* We don't need to check for SSL errors if we wrote some bytes */
         total += rc;
     } else {
-        sslconn->writeabortcount += 1;
-        //Ns_Log(Debug, "SSLSend(%d): (towrite = %d; total = %d; rc = %d; writeabortcount = %d)", socket, towrite, total, rc, sslconn->writeabortcount);
+        //Ns_Log(Debug, "Send(%d): (towrite = %d; total = %d; rc = %d)", socket, towrite, total, rc);
         switch(SSL_get_error(ssl, rc)) {
             case SSL_ERROR_NONE:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_NONE             (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_NONE             (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 break;
             case SSL_ERROR_WANT_WRITE:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_WANT_WRITE       (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_WRITE       (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 goto again;
                 break;
             case SSL_ERROR_WANT_READ:
                 /* We want to read but socket's nothing to read yet */
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_WANT_READ        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_READ        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 goto again;
                 break;
             case SSL_ERROR_WANT_X509_LOOKUP:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_WANT_X509_LOOKUP (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_WANT_X509_LOOKUP (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 SSL_renegotiate(ssl);
                 SSL_write(ssl, NULL, 0);
                 goto again;
                 break;
             case SSL_ERROR_SYSCALL:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_SYSCALL          (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_SYSCALL          (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 // XXX should check for invalid socket here ?
                 break;
             case SSL_ERROR_SSL:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_SSL              (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_SSL              (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 // XXX should check for invalid socket here ?
                 break;
             case SSL_ERROR_ZERO_RETURN:
-                //Ns_Log(Debug, "SSLSend(%d): SSL_ERROR_ZERO_RETURN      (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                /* We'll never see this error: either some bytes were written or we get a real error */
+                //Ns_Log(Debug, "Send(%d): SSL_ERROR_ZERO_RETURN      (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+
                 break;
             default:
-                //Ns_Log(Debug, "SSLSend(%d): FALLTHROUGH (error)        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
+                //Ns_Log(Debug, "Send(%d): FALLTHROUGH (error)        (towrite = %d; total = %d; rc = %d)", socket, total, towrite, rc);
                 break;
         }
     }
@@ -688,12 +665,76 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
     int            rc      = 0;
     int            total   = 0;
     NsOpenSSLConn *sslconn = SSL_get_app_data(ssl);
+    SOCKET         socket  = SSL_get_fd(ssl);
+
+    /*
+     * toread is a lie: it doesn't mean how many bytes are waiting to be read,
+     * but how many bytes I can fit into my buffer. It is therefore not a
+     * useful means of knowing when you've read all of the bytes the conn has
+     * waiting, so we'll need to handle the case where there are more bytes
+     * waiting to be read, but the buffer is already full and we have to return
+     * with that data.
+     */
+
+    Ns_Log(Debug, "Recv(%d): START: toread = %d", socket, toread);
+
+again:
+    Ns_Log(Debug, "SSL_pending: %d", SSL_pending(ssl));
+    rc = SSL_read(ssl, (char *) buffer, toread);
+    if (rc > 0) {
+        total += rc;
+    } else {
+        Ns_Log(Debug, "Recv(%d): (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+        switch(SSL_get_error(ssl, rc)) {
+            case SSL_ERROR_NONE:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                break;
+            case SSL_ERROR_WANT_WRITE:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_WRITE        (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                goto again;
+                break;
+            case SSL_ERROR_WANT_READ:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_READ         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                goto again;
+                //Ns_Fatal("Quit");
+                break;
+            case SSL_ERROR_WANT_X509_LOOKUP:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_X509_LOOKUP  (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                goto again;
+                break;
+                //SSL_renegotiate(ssl);
+                //SSL_write(ssl, NULL, 0);
+                //goto again;
+            case SSL_ERROR_SYSCALL:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_SYSCALL           (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                break;
+            case SSL_ERROR_SSL:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_SSL               (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                break;
+            case SSL_ERROR_ZERO_RETURN:
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                break;
+            default:
+                Ns_Log(Debug, "Recv(%d): FALLTHROUGH (error)         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                break;
+        }
+    }
+
+    return total;
+}
+
+extern int
+NsOpenSSLConnRecv2(SSL *ssl, void *buffer, int toread)
+{
+    int            rc      = 0;
+    int            total   = 0;
+    NsOpenSSLConn *sslconn = SSL_get_app_data(ssl);
 
     SOCKET socket  = INVALID_SOCKET;
 
     socket = SSL_get_fd(ssl);
 
-    Ns_Log(Debug, "SSLRecv(%d): START: toread = %d", socket, toread);
+    Ns_Log(Debug, "Recv(%d): START: toread = %d", socket, toread);
 
     /*
      * If client is cut off (as in somebody pulled the cable) which is apt to
@@ -706,54 +747,44 @@ NsOpenSSLConnRecv(SSL *ssl, void *buffer, int toread)
      * connection properly.
      */
 
-    /* XXX make configurable on global server basis */
-    if (sslconn->readabortcount > DEFAULT_READ_ABORT_COUNT) {
-        Ns_Log(Error, "%s (%s): aborting connection after %d failed reads: user most likely cut off",
-                MODULE, sslconn->server, sslconn->readabortcount);
-        return NS_ERROR;
-    }
-
 again:
     rc = SSL_read(ssl, (char *) buffer, toread);
     if (rc > 0) {
-        sslconn->readabortcount = 0;
         total += rc;
     } else {
-        sslconn->readabortcount += 1;
-        //Ns_Log(Debug, "SSLRecv(%d): (toread = %d; total = %d; rc = %d; readabortcount = %d)", socket, toread, total, rc, sslconn->readabortcount);
+        Ns_Log(Debug, "Recv(%d): (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
         switch(SSL_get_error(ssl, rc)) {
             case SSL_ERROR_NONE:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 break;
             case SSL_ERROR_WANT_WRITE:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_WANT_WRITE        (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_WRITE        (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 goto again;
                 break;
             case SSL_ERROR_WANT_READ:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_WANT_READ         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_READ         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 //sleep(3);
                 goto again;
                 //Ns_Fatal("Quit");
                 break;
             case SSL_ERROR_WANT_X509_LOOKUP:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_WANT_X509_LOOKUP  (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_WANT_X509_LOOKUP  (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 goto again;
                 break;
                 //SSL_renegotiate(ssl);
                 //SSL_write(ssl, NULL, 0);
                 //goto again;
             case SSL_ERROR_SYSCALL:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_SYSCALL           (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_SYSCALL           (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 break;
             case SSL_ERROR_SSL:
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_SSL               (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_SSL               (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 break;
             case SSL_ERROR_ZERO_RETURN:
-                // XXX ??? socket was closed by client?
-                //Ns_Log(Debug, "SSLRecv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): SSL_ERROR_ZERO_RETURN       (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 break;
             default:
-                //Ns_Log(Debug, "SSLRecv(%d): FALLTHROUGH (error)         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
+                Ns_Log(Debug, "Recv(%d): FALLTHROUGH (error)         (toread = %d; total = %d; rc = %d)", socket, toread, total, rc);
                 break;
         }
     }
@@ -817,56 +848,52 @@ extern int
 NsOpenSSLConnHandshake(NsOpenSSLConn *sslconn)
 {
     int    rc     = 0;
-    //SOCKET socket = INVALID_SOCKET;
-
-    //socket = SSL_get_fd(sslconn->ssl);
+    SOCKET socket = SSL_get_fd(sslconn->ssl);
 
     while (! SSL_is_init_finished(sslconn->ssl)) {
 
-	if (sslconn->sslcontext->role == SERVER_ROLE) {
-	    rc = SSL_accept(sslconn->ssl);
-	} else {
-	    rc = SSL_connect(sslconn->ssl);
-	}
+        if (sslconn->sslcontext->role == SERVER_ROLE) {
+            rc = SSL_accept(sslconn->ssl);
+        } else {
+            rc = SSL_connect(sslconn->ssl);
+        }
 
-	if (rc == 1) {
-	    return NS_OK;
-	} else {
-	    switch(SSL_get_error(sslconn->ssl, rc)) {
-		case SSL_ERROR_NONE:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_NONE             (rc = %d)", socket, rc);
-		    break;
-		case SSL_ERROR_WANT_WRITE:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_WANT_WRITE       (rc = %d)", socket, rc);
-		    //goto again;
-		    break;
-		case SSL_ERROR_WANT_READ:
-		    /* We want to read but socket's nothing to read yet */
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_WANT_READ        (rc = %d)", socket, rc);
-		    //goto again;
-		    break;
-		case SSL_ERROR_WANT_X509_LOOKUP:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_WANT_X509_LOOKUP (rc = %d)", socket, rc);
-		    //SSL_renegotiate(ssl);
-		    //SSL_write(ssl, NULL, 0);
-		    //goto again;
-		    break;
-		case SSL_ERROR_SYSCALL:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_SYSCALL          (rc = %d)", socket, rc);
-		    // XXX should check for invalid socket here ?
-		    break;
-		case SSL_ERROR_SSL:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_SSL              (rc = %d)", socket, rc);
-		    // XXX should check for invalid socket here ?
-		    break;
-		case SSL_ERROR_ZERO_RETURN:
-		    //Ns_Log(Debug, "SSLHandshake(%d): SSL_ERROR_ZERO_RETURN      (rc = %d)", socket, rc);
-		    break;
-		default:
-		    //Ns_Log(Debug, "SSLHandshake(%d): FALLTHROUGH (error)        (rc = %d)", socket, rc);
-		    break;
-	    }
-	}
+        switch(SSL_get_error(sslconn->ssl, rc)) {
+            case SSL_ERROR_NONE:
+                /* Handshake completed successfully */
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_NONE             (rc = %d)", socket, rc);
+                return NS_OK;
+                break;
+            case SSL_ERROR_WANT_WRITE:
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_WANT_WRITE       (rc = %d)", socket, rc);
+                break;
+            case SSL_ERROR_WANT_READ:
+                /* We want to read but socket's nothing to read yet */
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_WANT_READ        (rc = %d)", socket, rc);
+                break;
+            case SSL_ERROR_WANT_X509_LOOKUP:
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_WANT_X509_LOOKUP (rc = %d)", socket, rc);
+                //SSL_renegotiate(ssl);
+                //SSL_write(ssl, NULL, 0);
+                break;
+            case SSL_ERROR_SYSCALL:
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_SYSCALL          (rc = %d)", socket, rc);
+                return NS_ERROR;
+                break;
+            case SSL_ERROR_SSL:
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_SSL              (rc = %d)", socket, rc);
+                return NS_ERROR;
+                break;
+            case SSL_ERROR_ZERO_RETURN:
+                /* Connection was closed before any data was transferred */
+                Ns_Log(Debug, "Handshake(%d): SSL_ERROR_ZERO_RETURN      (rc = %d)", socket, rc);
+                return NS_ERROR;
+                break;
+            default:
+                Ns_Log(Debug, "Handshake(%d): FALLTHROUGH (error)        (rc = %d)", socket, rc);
+                return NS_ERROR;
+                break;
+        }
     }
 
     Ns_Log(Error, "%s (%s): SSL handshake failed", MODULE, sslconn->server);
